# AmiBoardInfoTool

./: .gitignore  AmiBoardInfoTool.cpp  CMakeLists.txt  README.md
include/: baseTypes.h  common.h  peImage.h
